# uliza-core-apis

./: .gitignore  README.md  apiary.apib
api/: api.conf
api/db/: Dockerfile  dbup.sh  package-lock.json  package.json
api/db/migrations/: 1501951865769_create_schema.js  1501951865777_create_roles.js  1501952582549_create_countries_table.js  1501957267623_create_registration_calls_table.js  1501958737504_create_participants_table.js  1501959875155_create_participant_registration_status_log_table.js  1501960967173_create_voto_response_data_table.js
api/sqitch/: sqitch.conf  sqitch.plan
api/sqitch/deploy/: api_schema.sql  countries.sql  participant_registration_status_log.sql  participants.sql  registration_calls.sql  responses.sql  role_admin.sql  role_api_consumer.sql  role_www.sql  voto_response_data.sql  voto_responses.sql
api/sqitch/revert/: api_schema.sql  countries.sql  participant_registration_status_log.sql  participants.sql  registration_calls.sql  responses.sql  role_admin.sql  role_api_consumer.sql  role_www.sql  voto_response_data.sql  voto_responses.sql
api/sqitch/verify/: api_schema.sql  countries.sql  participant_registration_status_log.sql  participants.sql  registration_calls.sql  responses.sql  role_admin.sql  role_api_consumer.sql  role_www.sql  voto_response_data.sql
auth0/api-server/: README.md  index.js  package-lock.json  package.json
auth0/clients/js-single-page/: README.md  auth0-variables.js  index.html  package.json
auth0/clients/node-api-access/: README.md  index.js  package-lock.json  package.json
auth0/clients/node-web/: README.md  app.js  package.json
auth0/clients/php-web/: README.md  logout.php
auth0/clients/uliza-api-access/: README.md  index.js
clients/js-single-page/: README.md
clients/node-web/: README.md  app.js
clients/php-web/: README.md  index.php
django-api/: .env.sample  .gitignore  .requirements.txt.swp  Dockerfile  db.sqlite3  docker-compose.yml  fri-log-665598a2cc6b.p12  manage.py  requirements.txt
django-api/api_core/: authentication.py  permissions.py  settings.py  urls.py  wsgi.py
django-api/covid/: admin.py  models.py  serializers.py  urls.py  views.py
django-api/covid/migrations/: 0001_initial.py  0002_auto_20200417_1547.py  0003_auto_20200420_1218.py  0004_auto_20200420_1227.py  0005_auto_20200420_2006.py  0006_question_type.py  0007_auto_20200420_2249.py  0008_auto_20200420_2315.py  0009_auto_20200420_2327.py  0010_auto_20200420_2346.py  0011_content_title.py  0012_auto_20200424_1204.py  0013_chatuser_state.py  0014_auto_20200424_2012.py
django-api/covid/templates/: bot_content.html
django-api/docker/: django.sh  requirements.txt
django-api/docker/core_api/: settings.py  urls.py
django-api/log_app/: admin.py  models.py  serializers.py  tests.py  urls.py
django-api/log_app/migrations/: 0001_initial.py  0002_auto_20141024_1255.py  0003_auto_20141024_1356.py  0004_auto_20141024_1357.py  0005_auto_20141024_1403.py  0006_auto_20141024_1406.py  0007_auto_20141025_0650.py  0008_auto_20141031_0647.py  0009_auto_20141031_0656.py  0010_auto_20141031_0712.py  0011_auto_20141031_0713.py  0012_auto_20141031_0828.py  0013_auto_20141031_1056.py  0014_program_journalists.py  0015_auto_20141031_1105.py  0016_auto_20141031_1152.py  0017_auto_20141031_1241.py  0018_auto_20141031_1245.py  0019_log_week.py  0020_log_poll.py  0021_project_start_date.py  0022_auto_20141102_1833.py  0023_program_duration.py  0024_auto_20141103_0700.py  0025_auto_20141111_0442.py  0026_auto_20141112_0748.py  0027_auto_20141112_1132.py  0028_auto_20150128_1241.py  0029_log_recording_backup.py  0030_auto_20150603_1205.py  0031_auto_20150620_1423.py  0032_auto_20150630_1838.py  0033_presenter_language.py  0034_auto_20150709_0832.py  0035_country_language.py  0036_account.py  0037_auto_20150711_1951.py  0038_program_confirmed_program_time.py  0039_auto_20150804_1115.py  0040_auto_20151018_0746.py  (+95 more)
django-api/telegram_bot/: bot_settings.py  covid_bot.py  models.py  telegrambot.py  uliza_bot.py  urls.py  views.py
django-api/uliza/: models.py  permissions.py  serializers.py  tests.py  urls.py  user.py  views.py
ivar/: LICENSE  package.json  tsconfig.json
ivar/src/: App.ts  index.ts
koa-again/: knexfile.js  package.json
koa-again/migrations/: 20170702004807_create_organizations.js
koa-again/src/: auth0.ts  index.ts
koa-again/src/test/: test.ts
koa-again/test/: mocha.opts
koa2/: .gitignore  ormconfig.json  package.json  tsconfig.json
koa2/docs/: index.html
koa2/src/: api.ts  index.ts
server/: .gitignore  LICENSE  README.md  gulpfile.js  knexfile.js  package.json
server/config/: default.toml
server/doc/: globals.html  index.html
server/docs/: globals.html  index.html
server/migrations/: 20170702004807_create_organizations.js  20170706182002_create_projects.js  20170706182144_create_countries.js  20170706182457_create_surveys.js  20170706182508_create_programs.js  20170706182513_create_schedules.js  20170706182548_create_campaigns.js  20170706182557_create_episodes.js  20170706182603_create_topics.js
server/src/: App.ts  Server.ts  app.ts  auth0.ts  db.ts  index.ts  knex.ts  router.ts
server/test/: app.test.ts  webhooks.voto.test.ts
services/broker/: .gitignore  LICENSE  simple.cabal  stack.yaml
services/registration-middleware/: .env.sample  Dockerfile  simple.cabal  stack.yaml
services/registration-middleware/app/: Main.hs
services/registration-middleware/src/FarmRadio/Uliza/: Registration.hs
services/registration-middleware/src/FarmRadio/Uliza/Api/: Client.hs  Participant.hs  RegistrationCall.hs  Utils.hs
services/registration-middleware/src/FarmRadio/Uliza/Registration/: App.hs  Logger.hs  Participant.hs  RegistrationCall.hs  SubscriberDetails.hs  SurveyTreePair.hs
services/registration-middleware/src/FarmRadio/Uliza/Registration/Voto/: CallScheduleResponse.hs  CallStatusUpdateHandler.hs  ResponseHandler.hs
services/registration-middleware/src/FarmRadio/Voto/: Client.hs
services/registration-middleware/wreq/: stack.yaml
uliza-join/registration-middleware/: package.json  server.js
(+302 files in other folders)
