name:                simple
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Johannes Hilden
maintainer:          jhilden@farmradio.org
copyright:           2017 Farm Radio International
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FarmRadio.Uliza.Api.Client
                     , FarmRadio.Uliza.Api.Context
                     , FarmRadio.Uliza.Api.Utils
                     , FarmRadio.Uliza.Registration
                     , FarmRadio.Uliza.Registration.Participant
                     , FarmRadio.Uliza.Registration.RegistrationCall
                     , FarmRadio.Voto.Client
  build-depends:       aeson ==1.1.2.0
                     , MissingH ==1.4.0.1
                     , base >= 4.7 && < 5
                     , bytestring ==0.10.8.1
                     , either ==4.4.1.1
                     , hslogger ==1.2.10
                     , HTTP ==4000.3.7
                     , http-client ==0.5.7.0
                     , http-types ==0.9.1
                     , lens ==4.15.3
                     , lens-aeson ==1.0.1
                     , postgresql-simple ==0.5.3.0
                     , safe-exceptions ==0.1.6.0
                     , scientific ==0.3.5.1
                     , text ==1.2.2.2
                     , time ==1.6.0.1
                     , transformers ==0.5.2.0
                     , wai ==3.2.1.1
                     , wai-extra ==3.0.20.0
                     , wai-predicates ==0.9.0
                     , wai-routing ==0.13.0
                     , wai-websockets ==3.0.1.1
                     , warp ==3.2.13
                     , websockets ==0.10.0.0
                     , wreq >= 0.5.1.0
  default-language:    Haskell2010

executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , either ==4.4.1.1
                     , aeson  ==1.1.2.0
                     , bytestring ==0.10.8.1
                     , lens ==4.15.3
                     , lens-aeson ==1.0.1
                     , http-types ==0.9.1
                     , hslogger ==1.2.10
                     , MissingH ==1.4.0.1
                     , safe-exceptions ==0.1.6.0
                     , http-client ==0.5.7.0
                     , simple
                     , text ==1.2.2.2
                     , text-format ==0.3.1.1
                     , scotty ==0.11.0
                     , transformers ==0.5.2.0
                     , wreq >= 0.5.1.0
                     , wai ==3.2.1.1
                     , wai-extra ==3.0.20.0
                     , wai-predicates ==0.9.0
                     , wai-routing ==0.13.0
                     , wai-websockets ==3.0.1.1
                     , websockets ==0.10.0.0
                     , warp ==3.2.13
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
                     , safe-exceptions ==0.1.6.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
