name:                simple
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Johannes Hildén
maintainer:          jhilden@farmradio.org
copyright:           2017 Farm Radio International
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10 

library
  hs-source-dirs:      src
  exposed-modules:     FarmRadio.Uliza.Api.Client
                     , FarmRadio.Uliza.Api.Utils
                     , FarmRadio.Uliza.Registration
                     , FarmRadio.Uliza.Registration.Participant
                     , FarmRadio.Uliza.Registration.RegistrationCall
                     , FarmRadio.Uliza.Registration.App
                     , FarmRadio.Uliza.Registration.Logger
                     , FarmRadio.Uliza.Registration.Voto.CallStatusUpdateHandler
                     , FarmRadio.Uliza.Registration.Voto.ResponseHandler
                     , FarmRadio.Uliza.Api.Participant
                     , FarmRadio.Uliza.Api.RegistrationCall
                     , FarmRadio.Uliza.Registration.SubscriberDetails
  build-depends:       aeson ==1.1.2.0
                     , base >= 4.7 && < 5
                     , bytestring ==0.10.8.1
                     , either ==4.4.1.1
                     , http-client ==0.5.7.0
                     , http-types ==0.9.1
                     , HTTP ==4000.3.7
                     , hslogger ==1.2.10
                     , lens ==4.15.4
                     , lens-aeson ==1.0.2
                     , MissingH ==1.4.0.1
                     , mtl ==2.2.1
                     , postgresql-simple ==0.5.3.0
                     , safe-exceptions ==0.1.6.0
                     , scotty ==0.11.0
                     , text ==1.2.2.2
                     , time ==1.6.0.1
                     , transformers ==0.5.2.0
                     , unordered-containers ==0.2.8.0
                     , urlencoded ==0.4.1
                     , wai ==3.2.1.1
                     , websockets ==0.10.0.0
                     , wreq ==0.5.1.0
  default-language:    Haskell2010

executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , dotenv ==0.3.4.0
                     , hslogger ==1.2.10
                     , http-client ==0.5.7.0
                     , lens ==4.15.4
                     , scotty ==0.11.0
                     , simple
                     , urlencoded ==0.4.1
                     , warp ==3.2.13
                     , wai-websockets ==3.0.1.1
                     , websockets ==0.10.0.0
                     , wreq ==0.5.1.0
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/FarmRadioHangar/uliza-core-apis
